# crystal-xrd

./: .gitignore  check_sg.ts  index.html  package-lock.json  package.json  test_sg.js  test_sg_gen.mjs  vite.config.ts
crystal-wasm/: Cargo.toml  LICENSE_MIT
crystal-wasm/src/: cif.rs  lib.rs  scattering.rs  symmetry.rs  xrd.rs
src/: App.tsx  index.css  types.ts
src/crystal/: cif.ts  indexing.ts  symmetry.ts  xrd.ts
src/data/: presets.ts  spaceGroups.ts
